# SequenceAlignment

./: Cargo.toml  README.md
src/: align.rs  main.rs
