[package]
name = "SequenceAlignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "4.0.32", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
seq_io = "0.3.1"
chrono = "0.4.26"